fixed pen cursor on Firefox (needed width / height) - added .svg too in img (in case)

--- a/assets/sass/main.css
+++ b/assets/sass/main.css
@@ -34,7 +34,7 @@ html, body {
   min-height: 100vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  cursor: url("data:image/svg+xml,%3Csvg width='20px' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 19 19'%3E%3Cg data-name='Calque 2'%3E%3Cg data-name='Calque 1'%3E%3Cpath d='M19 15.1l-.1 1.6a.4.4 0 0 1-.1.3l-1.9 1.8a.4.4 0 0 1-.2 0l-1.5.2a.4.4 0 0 1-.4-.1l-8.5-8.5-4.5-4.6a1 1 0 0 1-.2-.3L.9 3.7.1 1.3a1 1 0 0 1 0-.7A1 1 0 0 1 1.3 0l3 1 1.2.4a1.2 1.2 0 0 1 .4.3L13.2 9l5.7 5.7a.4.4 0 0 1 .1.3zm-2.5.2L3.9 2.6a4.4 4.4 0 0 0-1.2 1.2l12.7 12.8zM2.4 4.3A1.7 1.7 0 0 0 2 5a.6.6 0 0 0 .2.5l1.1 1.1 7 7 4.4 4.4.2-1a.2.2 0 0 0-.1-.2l-2.4-2.5-10.2-10zM18 14.9l-.1-.2-6-6-6.4-6.4a.6.6 0 0 0-.2-.2 1.4 1.4 0 0 0-1.1.2l5.2 5.2 7.3 7.3a.5.5 0 0 0 .4.1h1zM4.3 1.7L1.8.9a.2.2 0 0 0-.1 0 2.2 2.2 0 0 0-1 .9.2.2 0 0 0 0 .2l.7 2 .2.4a5 5 0 0 1 2.6-2.7zm11 16.7h1.3a.3.3 0 0 0 0-.1l1.7-1.6a.3.3 0 0 0 0-.1l.1-.7v-.5h-1.2a.3.3 0 0 0-.1.1L15.7 17a.6.6 0 0 0-.2.4l-.1 1z'/%3E%3Cpath d='M17.7 16.4a2.7 2.7 0 0 1 0 .3 1.7 1.7 0 0 1-1 1 .4.4 0 0 1-.5 0 .4.4 0 0 1 0-.5 1.7 1.7 0 0 1 1-1 .6.6 0 0 1 .2 0 .3.3 0 0 1 .3.2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), pointer; }
+  cursor: url("data:image/svg+xml,%3Csvg width='20px' height='20px' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 19 19'%3E%3Cg data-name='Calque 2'%3E%3Cg data-name='Calque 1'%3E%3Cpath d='M19 15.1l-.1 1.6a.4.4 0 0 1-.1.3l-1.9 1.8a.4.4 0 0 1-.2 0l-1.5.2a.4.4 0 0 1-.4-.1l-8.5-8.5-4.5-4.6a1 1 0 0 1-.2-.3L.9 3.7.1 1.3a1 1 0 0 1 0-.7A1 1 0 0 1 1.3 0l3 1 1.2.4a1.2 1.2 0 0 1 .4.3L13.2 9l5.7 5.7a.4.4 0 0 1 .1.3zm-2.5.2L3.9 2.6a4.4 4.4 0 0 0-1.2 1.2l12.7 12.8zM2.4 4.3A1.7 1.7 0 0 0 2 5a.6.6 0 0 0 .2.5l1.1 1.1 7 7 4.4 4.4.2-1a.2.2 0 0 0-.1-.2l-2.4-2.5-10.2-10zM18 14.9l-.1-.2-6-6-6.4-6.4a.6.6 0 0 0-.2-.2 1.4 1.4 0 0 0-1.1.2l5.2 5.2 7.3 7.3a.5.5 0 0 0 .4.1h1zM4.3 1.7L1.8.9a.2.2 0 0 0-.1 0 2.2 2.2 0 0 0-1 .9.2.2 0 0 0 0 .2l.7 2 .2.4a5 5 0 0 1 2.6-2.7zm11 16.7h1.3a.3.3 0 0 0 0-.1l1.7-1.6a.3.3 0 0 0 0-.1l.1-.7v-.5h-1.2a.3.3 0 0 0-.1.1L15.7 17a.6.6 0 0 0-.2.4l-.1 1z'/%3E%3Cpath d='M17.7 16.4a2.7 2.7 0 0 1 0 .3 1.7 1.7 0 0 1-1 1 .4.4 0 0 1-.5 0 .4.4 0 0 1 0-.5 1.7 1.7 0 0 1 1-1 .6.6 0 0 1 .2 0 .3.3 0 0 1 .3.2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), pointer; }
   @media (min-width: 400px) {
     html, body {
       font-size: 18px; } }
@@ -226,7 +226,8 @@ ul {
   border-left: 1px solid var(--templateColor);
   background: transparent;
   font-size: 1.5rem;
-  color: var(--templateColor); }
+  color: var(--templateColor);
+  text-align: center; }
   @media (min-width: 320px) {
     #toggle-site-nav {
       height: 64px;
@@ -330,6 +331,10 @@ ul {
 /*
 * MODULES
 */
+#changeColor {
+  position: fixed;
+  top: 30px; }
+
 .button {
   display: inline-block;
   text-decoration: none;
@@ -441,11 +446,13 @@ ul {
 .canvas-container {
   max-width: 100%;
   max-height: 200px;
-  overflow: hidden; }
+  overflow: hidden;
+  display: none; }
 
 #can {
   z-index: 8;
-  position: absolute; }
+  position: absolute;
+  top: 0; }
   @media (max-width: 768px) {
     #can {
       display: none; } }
@@ -458,7 +465,8 @@ ul {
 
 .shoplist__item {
   width: 100%;
-  list-style-type: none; }
+  list-style-type: none;
+  margin-bottom: 40px; }
   @media (min-width: 400px) {
     .shoplist__item {
       width: 45%; } }
@@ -466,7 +474,12 @@ ul {
     .shoplist__item {
       width: 30%;
       z-index: 9;
-      height: 450px; } }
+      margin-bottom: 80px; } }
+
+.shoplist__item--view-all__link, .shoplist__item--view-all__img {
+  display: block;
+  width: 100%;
+  height: 100%; }
 
 .shoplist__item__img img {
   width: 100%; }
